fixed white spaces issue

--- a/docs/_sass/layout.scss
+++ b/docs/_sass/layout.scss
@@ -36,7 +36,7 @@ header {
 	position: fixed;
 	width: 100%;
 	z-index: 9999;
-	margin-bottom: 5px;
+	// margin-bottom: 5px;
 	background: #C9FCF6;
 	&.header-background {
 		background: #F8FAFF; /* Old browsers */
